--- a/images/bo-chan-ga-goi-uc-solid-18/config.ini
+++ b/images/bo-chan-ga-goi-uc-solid-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-solid-18.html
 lastopen = 2024-06-07 01:32:39
 
 [search]
-lastsearch = 2024-07-23 13:17:38
+lastsearch = 2024-07-23 17:15:58
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,9 +37,9 @@ title = Bộ Chăn Ga Gối Solid SA 18 (120*190 cm) - Koala
 url = https://www.koala.vn/bo-chan-ga-goi-solid-sa-18.html
 
 [shopee.vn]
-match = 0.0%%
-title = BỘ CHĂN GA GỐI COTTON POLY MẪU TRÁI BƠ CỰC ...
-url = https://shopee.vn/BỘ-CHĂN-GA-GỐI-COTTON-POLY-MẪU-TRÁI-BƠ-CỰC-XINH-DRAP-GIƯỜNG-i.258261260.6137505996
+match = 7.7%%
+title = bộ Chăn Ga Gối Cotton 3F Kẻ Ngang-màu đen
+url = https://shopee.vn/bộ-Chăn-Ga-Gối-Cotton-3F-Kẻ-Ngang-màu-đen-i.99089604.5287351365
 
 [bedding.vn]
 match = -42.3%%
