--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-07-23 12:14:26
+lastsearch = 2024-07-23 17:16:54
 
 [demxanh.com]
 match = 40.7%%
@@ -52,9 +52,9 @@ title = Chiếu Điều Hòa Sợi Mây Tổng Hợp Cao Cấp ... - Babies.vn
 url = https://babies.vn/chieu-dieu-hoa-soi-may-tong-hop-cao-cap-chieu-dieu-hoa-thong-minh-thoang-khi-mat-ruoi-cho-mua-he
 
 [betiti.com]
-match = 68.2%%
-title = Chiếu điều hòa kèm gối
-url = https://betiti.com/san-pham/chieu-dieu-hoa-kem-goi/
+match = -29.6%%
+title = Chiếu Điều Hòa - Betiti - Chuyên Đồ Sơ Sinh, Trọn Bộ ...
+url = https://betiti.com/san-pham/chieu-dieu-hoa/
 
 [nemsaithanh.com]
 match = 46.2%%
