--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-23 16:30:13
+lastsearch = 2024-07-23 17:19:43
 
 [www.diepxuan.com]
-match = 19.0%%
-title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
+match = 14.3%%
+title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
 
 [www.youtube.com]
-match = -128.6%%
-title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 14 | Trọn Bộ Phim ...
-url = https://www.youtube.com/watch?v=GzepFXdUfeQ
+match = -133.3%%
+title = Tin BĐ - Đài Loan 14/3: Nga xâm lược Ukraine dẫn đến cuộc ...
+url = https://www.youtube.com/watch?v=k3DyOAawNp4
 
 [roc-taiwan.org]
 match = -66.7%%
@@ -47,9 +47,9 @@ title = Thông tin lãnh sự - Văn phòng Kinh tế và Văn hóa Đài Bắc 
 url = https://www.roc-taiwan.org/vn_vi/cat/47.html
 
 [www.facebook.com]
-match = 28.6%%
-title = Xin chào, tôi ở Đài Loan
-url = https://www.facebook.com/toiodailoan/?locale=vi_VN
+match = -138.1%%
+title = Bản tin tiếng Việt PTS 公視越南語新聞 | Taipei
+url = https://www.facebook.com/ptsvietnamesenews/?locale=vi_VN
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
@@ -77,9 +77,9 @@ title = Lịch bay Đài Loan 2024 - Tra cứu chuyến bay mới nhất ...
 url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan
 
 [visana.vn]
-match = -114.3%%
-title = Trọn bộ hồ sơ, thủ tục xin visa Đài Loan mới nhất - VISANA
-url = https://visana.vn/visa-dai-loan/
+match = -119.0%%
+title = Tất tần tật những điều cần biết về visa Quan Hồng Đài Loan
+url = https://visana.vn/visa-quan-hong-dai-loan/
 
 [www.tiktok.com]
 match = -104.8%%
