--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-07-23 13:19:39
+lastsearch = 2024-07-23 17:20:55
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Sơ đồ sân bay Tân Sơn Nhất ga nội địa, quốc tế MỚI N
 url = https://vinpearl.com/vi/so-do-san-bay-tan-son-nhat
 
 [www.facebook.com]
-match = -126.7%%
-title = Ways Station Gaming - "Nghiêng nước ...
-url = https://www.facebook.com/waysstation/photos/a.179106562519975/1171642583266363/?type=3
+match = -80.0%%
+title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
+url = https://www.facebook.com/phimhaygiare/
 
 [phongthuykyhoa.com]
 match = -73.3%%
@@ -375,4 +375,14 @@ url = https://masterisehomes.com/lumiere-boulevard/vn/project
 match = -86.7%%
 title = "L" version of Olympus 14-42 lens?
 url = https://www.mu-43.com/threads/l-version-of-olympus-14-42-lens.112284/
+
+[vnbis.com]
+match = -186.7%%
+title = List Companies - VBI - Vietnam Business Infomation
+url = https://vnbis.com/products/companies/
+
+[img.nordangliaeducation.com]
+match = 6.7%%
+title = HO CHI MINH CITY
+url = https://img.nordangliaeducation.com/resources/asia/_filecache/b26/be6/63445-welcome-to-hcmc--new-teachers-guide.pdf
 
