--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-23 14:44:33
+lastsearch = 2024-07-23 17:19:10
 
 [www.georgianicols.com]
 match = -192.3%%
@@ -27,9 +27,9 @@ title = License renewal procedures
 url = https://www.iihs.org/topics/older-drivers/license-renewal-laws-table
 
 [en.wikipedia.org]
-match = -23.1%%
-title = Japanese spider crab
-url = https://en.wikipedia.org/wiki/Japanese_spider_crab
+match = -160.0%%
+title = Svara
+url = https://en.wikipedia.org/wiki/Svara
 
 [www.facebook.com]
 match = -84.6%%
