--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-07-23 10:21:30
+lastsearch = 2024-07-23 17:17:54
 
 [www.mantubung.com]
 match = -100.0%%
@@ -17,9 +17,9 @@ title = Màn chống muỗi cho bé gấp gọn dễ dàng bao quản, mùng ...
 url = https://manbinhminh.com/2509/man-chong-muoi-cho-be-gap-gon-de-dang-bao-quan-mung-chup-tu-bung.aspx
 
 [shopee.vn]
-match = -33.3%%
-title = Màn Mùng chụp tự bung cho em bé sơ sinh
-url = https://shopee.vn/Màn-Mùng-chụp-tự-bung-cho-em-bé-sơ-sinh-Mùng-xếp-gấp-gọn-cho-bé-trẻ-em-bé-lớn-chống-muỗi-tuyệt-đối-i.236260085.7856510622
+match = -122.2%%
+title = Mùng chụp tự bung cho bé - màn chụp chống muỗi cho ...
+url = https://shopee.vn/Mùng-chụp-tự-bung-cho-bé-màn-chụp-chống-muỗi-cho-bé-trẻ-em-sơ-sinh-kiểu-xếp-gấp-gọn-tiện-dụng-i.236260085.13801083908
 
 [h5.lazada.vn]
 match = -33.3%%
