--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-07-23 17:13:35
+lastsearch = 2024-07-23 18:12:21
 
 [demxanh.com]
-match = 13.8%%
-title = Chăn ga gối Singapore Pyeoda Luxury 5 món
-url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-luxury-5-mon.html
+match = -41.4%%
+title = Đại lý mua chăn ga gối cưới Hải Phòng chính hãng, giá rẻ
+url = https://demxanh.com/bo-chan-ga-goi-cuoi-hai-phong.html
 
 [www.khodemthanhdo.com]
 match = 52.4%%
@@ -32,9 +32,9 @@ title = Bộ chăn ga vỏ gối lụa 5 món Skysilk hàng Pyeoda cao cấp ...
 url = https://shopee.vn/Bộ-chăn-ga-vỏ-gối-lụa-5-món-Skysilk-hàng-Pyeoda-cao-cấp-có-túi-đựng-i.60303676.20559202272
 
 [thegioidemonline.com]
-match = 34.5%%
-title = Bộ chăn ga gối Pyeoda LCHARME GẤM 7 món
-url = https://thegioidemonline.com/bo-chan-ga-goi-pyeoda-lcharme-gam-7-mon.html
+match = -6.9%%
+title = Bộ chăn ga gối cotton Basic (chăn hè) màu xanh lá
+url = https://thegioidemonline.com/bo-chan-ga-goi-cotton-basic-chan-he-mau-xanh-la.html
 
 [dem4mua.vn]
 match = 6.9%%
@@ -47,9 +47,9 @@ title = Điệp Xuân Bộ chăn ga gấm Pyeoda SkySilk
 url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 
 [www.facebook.com]
-match = 28.0%%
-title = Chăn Ga Gối Đệm Singapore
-url = https://www.facebook.com/changagoisingapore/?locale=uk_UA
+match = -27.8%%
+title = Đệm Xanh Bắc Giang
+url = https://www.facebook.com/demxanh.308bacgiang/?locale=nl_BE
 
 [changagoidemdep.vn]
 match = 3.4%%
