--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-07-23 15:45:27
+lastsearch = 2024-07-23 18:12:53
 
 [www.youtube.com]
 match = -40.7%%
@@ -47,9 +47,9 @@ title = Chăn ga gối Olympia chính hãng giá rẻ nhất thị trường
 url = https://demxanh.com/chan-ga-goi-olympia.html
 
 [www.thegioididong.com]
-match = -63.0%%
-title = Cách chặn, bỏ chặn Facebook trên điện thoại, máy tính ...
-url = https://www.thegioididong.com/hoi-dap/huong-dan-chan-va-huy-chan-tai-khoan-facebook-1037037
+match = -48.1%%
+title = Cách mở chặn, bỏ chặn cuộc gọi đi trên điện thoại ...
+url = https://www.thegioididong.com/hoi-dap/cau-hoi-882159
 
 [dienmaycholon.vn]
 match = -44.4%%
