--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-23 16:17:14
+lastsearch = 2024-07-23 19:26:47
 
 [www.galottery.com]
 match = -7.7%%
@@ -214,7 +214,7 @@ url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-f
 [books.google.com]
 match = -161.5%%
 title = Crystal Data: Inorganic compounds 1967-1969
-url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gw-z9-BZ&sig=ACfU3U1dvztb7ovG6mHDf7VafxQyo5_4KA&hl=en&sa=X&ved=2ahUKEwjX4OKE6ryHAxWoFVkFHX_DDncQ6AF6BAgYEAM
+url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gw-Aa3y1&sig=ACfU3U2562l5S-GAFkVgwnw5dyjSmi8tew&hl=en&sa=X&ved=2ahUKEwi0lJa0lL2HAxV8MVkFHUHgCNYQ6AF6BAgcEAM
 
 [ottawabraves.com]
 match = -292.3%%
